--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="class or property">
 <meta property="og:type" content="website">
 <meta property="og:title" content="objectid">
-<meta property="og:url" content="https://aircha.github.io/index.html">
+<meta property="og:url" content="https://objectid.github.io.git/index.html">
 <meta property="og:site_name" content="objectid">
 <meta property="og:description" content="class or property">
 <meta property="og:locale" content="ko">
